Some More UI Enhancements

--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -9,6 +9,9 @@
     </select>
   </div>
 </div>
+<div class="container text-center" >
+  <img src={{myimage}} style="width: 120px;">
+</div>
 <div id="quiz">
   <h2 class="text-center font-weight-normal">{{quiz.name}}</h2>
   <hr />
